[package]
name = "sanity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
env_logger = "0.9.0"
execute = "0.2.9"
ignore = "0.4.18"
log = "0.4.14"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
structopt = "0.3.25"
